// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenHelmet - visible:  visible: false 이면 navbar 가 나타나지 않는다 1`] = `
<DocumentFragment>
  <div
    class="Navigator_root__hije1d2 Navigator_root_Android__hije1d3 Navigator_Android__hije1d0"
    style="--kf_navigator_animationDuration: 270ms;"
  >
    <div
      class="Card_container__1ok9rul0 Card_container_enterActive__1ok9rul1"
    >
      <div
        class="Card_mainOffset__1ok9rul9"
      >
        <div
          class="Card_main__1ok9rulc Card_main_true__1ok9rulh Card_main_true__1ok9rulj"
          style="--kf_navigator_navbar-animationDuration: 0s;"
        >
          <div
            class="Card_frameOffset__1ok9rull"
          >
            <div
              class="Card_frame__1ok9rulp"
            >
              <div>
                <span>
                  example
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ScreenHelmet - visible:  visible: true 이면 navbar 가 나타난다 1`] = `
<DocumentFragment>
  <div
    class="Navigator_root__hije1d2 Navigator_root_Android__hije1d3 Navigator_Android__hije1d0"
    style="--kf_navigator_animationDuration: 270ms;"
  >
    <div
      class="Card_container__1ok9rul0 Card_container_enterActive__1ok9rul1"
    >
      <div
        class="Card_mainOffset__1ok9rul9"
      >
        <div
          class="Card_main__1ok9rulc Card_main_true__1ok9rulh Card_main_true__1ok9ruli Card_main_true__1ok9rulj"
          style="--kf_navigator_navbar-animationDuration: 0s;"
        >
          <div
            class="Navbar_container__x613ng0"
            data-testid="navbar"
            style="--kf_navigator_navbar-center-mainWidth: undefinedpx;"
          >
            <div
              class="Navbar_main__x613ng2"
            >
              <div
                class="Navbar_flex__x613ng4"
              >
                <div
                  class="Navbar_left__x613ng5"
                >
                  <a
                    aria-label="Close"
                    class="Navbar_closeButton__x613ng9"
                    role="text"
                  >
                    <svg
                      class="Navbar_svgIcon__x613ngj"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3.72633 3.72633C4.0281 3.42456 4.51736 3.42456 4.81913 3.72633L12 10.9072L19.1809 3.72633C19.4826 3.42456 19.9719 3.42456 20.2737 3.72633C20.5754 4.0281 20.5754 4.51736 20.2737 4.81913L13.0928 12L20.2737 19.1809C20.5754 19.4826 20.5754 19.9719 20.2737 20.2737C19.9719 20.5754 19.4826 20.5754 19.1809 20.2737L12 13.0928L4.81913 20.2737C4.51736 20.5754 4.0281 20.5754 3.72633 20.2737C3.42456 19.9719 3.42456 19.4826 3.72633 19.1809L10.9072 12L3.72633 4.81913C3.42456 4.51736 3.42456 4.0281 3.72633 3.72633Z"
                        fill="currentColor"
                      />
                    </svg>
                  </a>
                </div>
                <div
                  class="Navbar_center__x613nga Navbar_center_true__x613ngb"
                >
                  <div
                    class="Navbar_centerMain__x613ngc Navbar_centerMain_true__x613ngd Navbar_centerMain_true__x613nge"
                  />
                  <div
                    class="Navbar_centerMainEdge__x613ngh"
                  />
                </div>
                <div
                  class="Navbar_right__x613ng7 Navbar_right_true__x613ng8"
                />
              </div>
            </div>
          </div>
          <div
            class="Card_frameOffset__1ok9rull"
          >
            <div
              class="Card_frame__1ok9rulp"
            >
              <div>
                <span>
                  example
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
